<resources>
    <string name="app_name">eZnStore</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">INICIAR SESION</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="eZnStore">Bienvendo a eZnStore!</string>
    <string name="atras">Atras</string>
    <string name="agregar_al_carrito">agregar al carrito</string>
    <string name="precio_producto">Precio Producto</string>
    <string name="descripcion">Descripcion</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="imagen_producto">Imagen Producto</string>
    <string name="categorias">Categorías</string>
    <string name="productos">Productos</string>
    <string name="categoria">Categorías</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="ir_al_carrito">carrito go</string>
    <string name="ir_a_productos">ir a productos</string>
    <string name="productos_en_el_carrito">Productos en el Carrito</string>
    <string name="eliminar_producto">elimin ar</string>
</resources>