<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/secondaryTeal"> <!-- Fondo cambiado a teal secundario -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_image"
                android:contentDescription="@string/imagen_producto"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/nombre_producto"
                android:textColor="@color/primaryBlue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/descripcion"
                android:textColor="@color/secondaryPurple"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/precio_producto"
                android:textColor="@color/primaryBlue"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/atras"
                android:contentDescription="@string/atras" />

            <ImageButton
                android:id="@+id/add_to_cart_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/carro"
                android:contentDescription="@string/agregar_al_carrito" />

            <!-- Botón "Ir al carrito" -->
            <ImageButton
                android:id="@+id/go_to_cart_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/boton_ir_carrito"
                android:contentDescription="@string/ir_al_carrito" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
