<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_700"
    android:gravity="center"
    android:padding="16dp">

    <!-- Encabezado de Bienvenida -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="107dp"
            android:layout_marginTop="-24dp"
            android:background="@color/purple_500"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginStart="-34dp"
            android:layout_marginTop="24dp"
            android:text="@string/eZnStore"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <!-- Imagen de perfil -->

    <!-- Campo de Usuario -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_5" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_user_icon"
        android:padding="12dp"
        android:background="@drawable/rounded_input_field"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock_icon"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_input_field"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <!-- Enlace de Olvidé mi Contraseña -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_500"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"/>

    <!-- Botón de Inicio de Sesión -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/teal_200"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@color/white" />

</LinearLayout>
