<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/secondaryPurple"> <!-- Fondo cambiado a púrpura secundario -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productos_en_el_carrito"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <ListView
        android:id="@+id/listViewCarrito"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/lightGray"
        android:elevation="2dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />

    <Button
        android:id="@+id/finalizar_compra_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_compra"
        android:backgroundTint="@color/secondaryTeal"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ImageButton
        android:id="@+id/go_to_products_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/atras"
        android:contentDescription="@string/ir_a_productos"
        android:layout_marginTop="16dp" />

</LinearLayout>